CS-4596: Position of Chatbar portlet is changed when click switch view mode and can't edit this portlet     * Move the chatbar portlet to the bottom of the page.     * Fix the chatbar portlet position when it's in the edit mode.     * Fix the covering space of the chatbar portlet.

--- a/eXoApplication/chatbar/webapp/src/main/webapp/skin/DefaultStylesheet.css
+++ b/eXoApplication/chatbar/webapp/src/main/webapp/skin/DefaultStylesheet.css
@@ -904,8 +904,6 @@ form {
 
 .UIChatBarPortlet{
 	min-width: 900px;
-	position:fixed;
-	bottom:1px;
 	padding:0px;
 }
 
